--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,6 +1,2 @@
-
-add_definitions(-DTEST_DATA_PATH="${CMAKE_CURRENT_SOURCE_DIR}/data")
-fips_include_directories( ${CMAKE_CURRENT_SOURCE_DIR}/data )
-
-
-add_subdirectory( unit/ )
+cmake_minimum_required(VERSION 3.10)
+project(liboco
